Format playbook and add bashrc deployment

--- a/dto_user.yml
+++ b/dto_user.yml
@@ -1,7 +1,6 @@
 ---
 - name: Manage remote Debian client
   hosts: debian
-  become: true
   tasks:
     - name: Ensure dto user exists with sudo privileges
       ansible.builtin.user:
@@ -10,6 +9,14 @@
         append: true
         create_home: true
         password: "{{ 'dto' | password_hash('sha512') }}"
+        shell: /bin/bash
     - name: Force dto to change password on first login
       ansible.builtin.command:
         cmd: chage -d 0 dto
+    - name: Deploy colorful bashrc for dto user
+      ansible.builtin.template:
+        src: templates/bashrc.j2
+        dest: /home/dto/.bashrc
+        owner: dto
+        group: dto
+        mode: '0644'
