--- a/dto_user.yml
+++ b/dto_user.yml
@@ -13,6 +13,10 @@
     - name: Force ironscope to change password on first login
       ansible.builtin.command:
         cmd: chage -d 0 ironscope
+    - name: Update system packages
+      ansible.builtin.apt:
+        update_cache: true
+        upgrade: dist
     - name: Install rclone
       ansible.builtin.apt:
         name: rclone
