--- a/dto_user.yml
+++ b/dto_user.yml
@@ -2,6 +2,12 @@
 - name: Manage remote Debian client
   hosts: debian
   tasks:
+    - name: Check if ironscope user already exists
+      ansible.builtin.command: id -u ironscope
+      register: ironscope_user_check
+      failed_when: false
+      changed_when: false
+
     - name: Ensure ironscope user exists with sudo privileges
       ansible.builtin.user:
         name: ironscope
@@ -10,18 +16,38 @@
         create_home: true
         password: "{{ 'iron' | password_hash('sha512') }}"
         shell: /bin/bash
-    - name: Force ironscope to change password on first login
-      ansible.builtin.command:
-        cmd: chage -d 0 ironscope
+        password_expire: true
+        update_password: on_create
+      when: ironscope_user_check.rc != 0
+      register: created_ironscope_user
+
+    - name: Mark that ironscope user is available
+      ansible.builtin.set_fact:
+        ironscope_user_exists: "{{ (created_ironscope_user is defined and created_ironscope_user.changed) or (ironscope_user_check.rc == 0) }}"
+
     - name: Update system packages
       ansible.builtin.apt:
         update_cache: true
         upgrade: dist
+
+    - name: Check if rclone is installed
+      ansible.builtin.stat:
+        path: /usr/bin/rclone
+      register: rclone_binary
+
     - name: Install rclone
       ansible.builtin.apt:
         name: rclone
         state: present
         update_cache: true
+      when: not rclone_binary.stat.exists
+
+    - name: Check if onedrive directory exists
+      ansible.builtin.stat:
+        path: /home/ironscope/onedrive
+      register: onedrive_dir
+      when: ironscope_user_exists
+
     - name: Create onedrive directory for ironscope
       ansible.builtin.file:
         path: /home/ironscope/onedrive
@@ -29,6 +55,16 @@
         owner: ironscope
         group: ironscope
         mode: '0755'
+      when:
+        - ironscope_user_exists
+        - not onedrive_dir.stat.exists
+
+    - name: Check if ironscope bashrc exists
+      ansible.builtin.stat:
+        path: /home/ironscope/.bashrc
+      register: ironscope_bashrc
+      when: ironscope_user_exists
+
     - name: Deploy colorful bashrc for ironscope user
       ansible.builtin.template:
         src: templates/bashrc.j2
@@ -36,3 +72,6 @@
         owner: ironscope
         group: ironscope
         mode: '0644'
+      when:
+        - ironscope_user_exists
+        - not ironscope_bashrc.stat.exists
