--- a/dto_proxmox.yml
+++ b/dto_proxmox.yml
@@ -77,3 +77,17 @@
     - name: "14 Show block devices"
       ansible.builtin.debug:
         var: block_devices.stdout_lines
+
+    - name: "15 Check if root bashrc exists"
+      ansible.builtin.stat:
+        path: /root/.bashrc
+      register: root_bashrc
+
+    - name: "16 Deploy colorful bashrc for root user"
+      ansible.builtin.template:
+        src: templates/bashrc.j2
+        dest: /root/.bashrc
+        owner: root
+        group: root
+        mode: '0644'
+      when: not root_bashrc.stat.exists
