--- a/dto_proxstat.yml
+++ b/dto_proxstat.yml
@@ -48,3 +48,22 @@
     - name: "10 Show block devices"
       ansible.builtin.debug:
         var: block_devices.stdout_lines
+
+
+    - name: "11 Collect data for summary"
+      ansible.builtin.set_fact:
+        proxstat_data:
+          storage_status: "{{ storage_status.stdout_lines }}"
+          network_config: "{{ network_config.stdout | from_json }}"
+          ip_addresses: "{{ ip_addr_output.stdout_lines }}"
+          pve_version: "{{ pve_version.stdout_lines }}"
+          block_devices: "{{ block_devices.stdout_lines }}"
+
+- name: Build Proxmox summary HTML
+  hosts: localhost
+  gather_facts: false
+  tasks:
+    - name: Render Proxmox summary HTML
+      ansible.builtin.template:
+        src: templates/proxmox_summary.html.j2
+        dest: proxmox-summary.html
