--- a/dto_proxstat.yml
+++ b/dto_proxstat.yml
@@ -59,19 +59,12 @@
           pve_version: "{{ pve_version.stdout_lines }}"
           block_devices: "{{ block_devices.stdout_lines }}"
 
-- name: Build Proxmox summary PDF
-  hosts: localhost
-  gather_facts: false
-  vars:
-    summary_markdown: proxmox-summary.md
-  tasks:
-    - name: Render Proxmox summary markdown
-      ansible.builtin.template:
-        src: templates/proxmox_summary.md.j2
-        dest: "{{ summary_markdown }}"
+    - name: Build Proxmox summary HTML
+      hosts: localhost
+      gather_facts: false
+      tasks:
+        - name: Render Proxmox summary HTML
+          ansible.builtin.template:
+            src: templates/proxmox_summary.html.j2
+            dest: proxmox-summary.html
 
-    - name: Create Proxmox summary PDF
-      ansible.builtin.command:
-        cmd: pandoc {{ summary_markdown }} -o proxmox-summary.pdf
-      args:
-        creates: proxmox-summary.pdf
