--- a/dto_proxstat.yml
+++ b/dto_proxstat.yml
@@ -95,6 +95,7 @@
           uptime: "{{ uptime.stdout }}"
           creation_date: "{{ ansible_date_time.iso8601 }}"
           vm_list: "{{ vm_list.stdout_lines }}"
+      cacheable: true
 
     - name: Build Proxmox summary HTML
       ansible.builtin.template:
