debugging der Manufacturer und product infos

--- a/dto_proxinvoke.yml
+++ b/dto_proxinvoke.yml
@@ -54,8 +54,9 @@
         --cores {{ proxinvoke.cores }}
         --net0 {{ proxinvoke.networks[0] }}
         {% if proxinvoke.smbios1 is defined %}
-        --smbios1 uuid={{ proxinvoke.smbios1.uuid }}
-        --args '-smbios type=1,uuid={{ proxinvoke.smbios1.uuid }},manufacturer="{{ proxinvoke.smbios1.manufacturer }}",product="{{ proxinvoke.smbios1.product }}"'
+        --smbios1 "{{ 'uuid=' ~ proxinvoke.smbios1.uuid
+                     ~ (',manufacturer=' ~ (proxinvoke.smbios1.manufacturer | quote) if proxinvoke.smbios1.manufacturer is defined else '')
+                     ~ (',product=' ~ (proxinvoke.smbios1.product | quote) if proxinvoke.smbios1.product is defined else '') }}"
         {% endif %}
       when: proxinvoke.vmid|string not in qm_list.stdout
 
@@ -68,8 +69,9 @@
     - name: "10 Set SMBIOS parameters"
       ansible.builtin.command: >-
         qm set {{ proxinvoke.vmid }}
-        --smbios1 uuid={{ proxinvoke.smbios1.uuid }}
-        --args '-smbios type=1,uuid={{ proxinvoke.smbios1.uuid }},manufacturer="{{ proxinvoke.smbios1.manufacturer }}",product="{{ proxinvoke.smbios1.product }}"'
+        --smbios1 "{{ 'uuid=' ~ proxinvoke.smbios1.uuid
+                     ~ (',manufacturer=' ~ (proxinvoke.smbios1.manufacturer | quote) if proxinvoke.smbios1.manufacturer is defined else '')
+                     ~ (',product=' ~ (proxinvoke.smbios1.product | quote) if proxinvoke.smbios1.product is defined else '') }}"
       when: proxinvoke.smbios1 is defined
 
     - name: "11 Check VM status"
